RESOLVED FIXED157868
StringBuilder::appendQuotedJSONString doesn't properly protect against the math it's doing. Make the math fit the assertion.
https://bugs.webkit.org/show_bug.cgi?id=157868
Summary StringBuilder::appendQuotedJSONString doesn't properly protect against the ma...
Saam Barati
Reported 2016-05-18 15:55:02 PDT
...
Attachments
patch (2.29 KB, patch)
2016-05-18 16:08 PDT, Saam Barati
no flags
patch (2.33 KB, patch)
2016-05-18 16:18 PDT, Saam Barati
no flags
patch (2.31 KB, patch)
2016-05-18 16:19 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-05-18 16:08:03 PDT
Saam Barati
Comment 2 2016-05-18 16:18:46 PDT
Created attachment 279310 [details] patch changed name of the bug
Saam Barati
Comment 3 2016-05-18 16:19:55 PDT
Created attachment 279311 [details] patch change variable name
WebKit Commit Bot
Comment 4 2016-05-18 18:00:21 PDT
Comment on attachment 279311 [details] patch Clearing flags on attachment: 279311 Committed r201121: <http://trac.webkit.org/changeset/201121>
WebKit Commit Bot
Comment 5 2016-05-18 18:00:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.