StringBuilder::appendQuotedJSONString doesn't properly protect against the math it's doing. Make the math fit the assertion. https://bugs.webkit.org/show_bug.cgi?id=157868

Reviewed by Benjamin Poulain.

appendQuotedJSONString was rounding up to the next power of two when resizing
its buffer. Lets call the allocation size X. If X > 2^31, then
roundUpToPowerOfTwo(X) == 0. This patch fixes this by making the
assertion reflect what the code is doing. We now allocate to a size
of X = std::max(maximumCapacityRequired , roundUpToPowerOfTwo(maximumCapacityRequired))

* wtf/text/StringBuilder.cpp:
(WTF::StringBuilder::appendQuotedJSONString):


Canonical link: https://commits.webkit.org/175999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201121 268f45cc-cd09-0410-ab3c-d52691b4dbfc